[package]
name = "gnunet-sys"
version = "0.0.1"
description = "Rust FFI bindings for the gnunet C API."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
keywords = ["gnunet"]
categories = []
readme = "README.md"
repository = "https://github.com/bamilab/gnunet-sys"

[features]
default = ["core"]

cadet = []
fs = []
peerstore = []

core = []

[lib]
name = "gnunet_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "^0.55"
cc = "^1.0"
lazy_static = "^1.0"
pkg-config = "^0.3"